--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "terminal-tab",
+  "name": "terminal-tab-fork",
   "main": "./lib/main",
-  "version": "0.6.0",
-  "description": "A simple terminal for panes and docks.",
+  "version": "0.6.1",
+  "description": "A simple terminal for panes and docks. Forked from terminal-tab",
   "author": {
     "name": "Justin Mecham",
     "email": "justin@mecham.me",
